Overflow fix

--- a/src/routes/styles.scss
+++ b/src/routes/styles.scss
@@ -35,7 +35,7 @@ p {
 }
 
 a {
-	color: var(--color-theme-1);
+	color: var(--color-theme-2);
 	text-decoration: none;
 }
 
